--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Test 1</title>
+    <title>Branch br1</title>
 
     <script srrc="js/main.js"></script>
 </head>
 <body>
 
-This is Test1 : Master
+This is Test1 : Branch BR1
 
 </body>
 </html>
