--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Branch br1</title>
+    <title>Branch br2</title>
 
-    <script srrc="js/main.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/branch2.js"></script>
 </head>
 <body>
 
-This is Test1 : Branch BR1
+This is Test1 : Branch BR2
 
 </body>
 </html>
