--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Branch br2</title>
+    <title>Master</title>
 
     <script src="js/main.js"></script>
     <script src="js/branch1.js"></script>
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-This is Test1 : Branch BR2
+This is Master
 
 </body>
 </html>
