--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <script src="js/main.js"></script>
     <script src="js/branch1.js"></script>
     <script src="js/branch2.js"></script>
+    <script src="js/branch4.js"></script>
 
 </head>
 <body>
 
-This is Master
+This is Branch4
 
 </body>
 </html>
